@@ -1,3 +1,11 @@
+2007-06-22  David Wetzel <dave@turbocat.de>
+    * GSWAdaptors/Apache2/mod_gsw.c
+    * GSWSWeb.framework/GSWComponentRequestHandler.m
+    * GSWeb.framework/GSWDefaultAdaptorThread.m
+
+    Added support for POST requests from browsers without content-length header.
+    (firefox does this without proxy)
+
 2007-05-15  David Wetzel <dave@turbocat.de>
   * GSWAdaptors/Apache2
   made Application name clickable on status page
